# client-side-dnssec

./: .gitignore  README.md
NM-sys/: Cargo.toml  build.rs
NM-sys/src/: lib.rs
NM-sys/tests/: abi.rs  constant.c  layout.c
NM/src/auto/: active_connection.rs  client.rs  enums.rs  mod.rs
config-dns/: .gitignore  Cargo.toml  README.md  get-conn.py  trigger.sh
config-dns-daemon/: 01-trigger-config-dns.sh  02-trigger-config-dns  Cargo.toml  Makefile  config-dns-prepare.py  control-dns-daemon.service  test.sh
config-dns-daemon/src/: connections.rs  knot_backend.rs  main.rs
config-dns/config/: kresd.socket
config-dns/src/: main.rs
dbus-connection/: Cargo.toml  README.md
dbus-connection/src/: Makefile  main.rs  nmdbus.rs
dns-roadblock-tests/: .gitignore  Cargo.toml
dns-roadblock-tests/src/: main.rs
dnsconfigd/: Cargo.toml
dnsconfigd/src/: connection.rs  dbus_monitor.rs  main.rs
resolver/: Cargo.toml
resolver/src/: main.rs
scripts/: cu.py
