[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
path = "../gio-sys"
version = "0.2.0"

[dependencies.glib-sys]
path = "../glib-sys"
version = "0.2.0"

[dependencies.gobject-sys]
path = "../gobject-sys"
version = "0.2.0"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v1_2 = []
v1_4 = ["v1_2"]
v1_6 = ["v1_4"]
v1_8 = ["v1_6"]

[lib]
name = "nm_sys"

[package]
build = "build.rs"
links = "nm"
name = "nm-sys"
version = "0.2.0"
